--- a/day4/my-app/src/components/card.css
+++ b/day4/my-app/src/components/card.css
@@ -19,3 +19,10 @@
   border-radius: 15px;
   margin: 20px 20px;
 }
+
+.list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
