--- a/day5/my-app/src/components/index.css
+++ b/day5/my-app/src/components/index.css
@@ -1,5 +1,6 @@
 .counter {
   display: flex;
+  flex-direction: column;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -10,6 +11,15 @@
   width: 30px;
   margin: 20px 20px;
   border-radius: 10px;
+}
+.counter_co {
+  display: flex;
+  align-items: center;
+}
+
+.counter_text > p {
+  font-size: 30px;
+  font-family: sans-serif;
 }
 
 .todo_whole {
@@ -22,4 +32,10 @@
 
 .todo li {
   list-style: none;
+}
+
+.todo {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
