--- a/day7/my-app/src/components/cards/box.css
+++ b/day7/my-app/src/components/cards/box.css
@@ -7,10 +7,15 @@
   padding: 20px;
   margin: 20px;
   width: 250px;
-
   border-radius: 15px;
   box-shadow: 5px 5px #565656;
   background: #fff;
+  transition: background-color 0.3s ease;
+}
+
+.box:hover {
+  cursor: pointer;
+  background: #d4d4d4;
 }
 
 .cards {
